# cta-eta

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  config.toml  pyproject.toml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  ROADMAP.md  STATE.md  TODO_STORAGE.md  agent-history.json  v0.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.1-data-collection.md
.planning/phases/01-foundation-configuration/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.planning/phases/02-storage-abstraction/: 02-01-PLAN.md  02-01-SUMMARY.md
.planning/phases/03-static-data-management/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-PLAN.md.backup  03-02-SUMMARY.md  03-CONTEXT.md  DISCOVERY.md
.planning/phases/04-static-file-caching/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/phases/05-weather-data-collection/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md
.planning/phases/06-train-polling/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md
.planning/phases/07-resilience-recovery/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-CONTEXT.md
.planning/phases/08-monitoring-metrics/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-CONTEXT.md
.planning/phases/09-alerting-deployment/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-04-SUMMARY.md
.planning/phases/10-journal-writer/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-CONTEXT.md
.planning/phases/11-data-validation-cleaning/: 11-01-PLAN.md  11-01-SUMMARY.md  11-02-PLAN.md  11-02-SUMMARY.md  11-03-PLAN.md  11-03-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/phases/12-storage-optimization/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-03-PLAN.md  12-03-SUMMARY.md  12-CONTEXT.md  12-RESEARCH.md  12-VERIFICATION.md
deploy/: README.md  cloud-init-ol9.yaml  cta-alerts.service  cta-alerts.timer  cta-compaction.service  cta-compaction.timer  cta-train-daemon.service  cta-weather-daemon.service  logrotate.conf
devtools/: lint.py
src/cta_eta/: __init__.py  api_stations_weather.py  api_track_shape.py  api_train_position.py  api_weather_nws.py  api_weather_open_meteo.py  api_weather_openweathermap.py  cache.py  config.py  daemon.py  logging.py  storage.py  train_position.py  weather_grid_cache.py  weather_mapping.py
src/cta_eta/data_collection/: __init__.py  config.py  exceptions.py  logging.py  utils.py
src/cta_eta/data_collection/apis/: __init__.py  api_cta_stations.py  api_track_shape.py  api_train_position.py  api_weather_nws.py  api_weather_open_meteo.py  api_weather_openweathermap.py
src/cta_eta/data_collection/compaction/: __init__.py  archiver.py  compact.py  ipc_reader.py  schema_registry.py  schemas.py  uploader.py
src/cta_eta/data_collection/merging/: __init__.py  weather_merger.py
src/cta_eta/data_collection/orchestration/: __init__.py  daemon.py  daemon_async.py  daemon_utils.py  diagnostics.py  gap_detection.py  train_position_daemon.py  weather_daemon.py  weather_grid_discovery.py
src/cta_eta/data_collection/schemas/: train_positions.json  weather.json
src/cta_eta/data_collection/storage_cache/: __init__.py  cache.py  journal_writer.py  kv_cache.py  parquet_writer.py  storage.py  weather_grid_cache.py  writer_protocol.py
src/cta_eta/monitoring/: __init__.py  alerting.py  cli.py  health_check.py  run_alerts.py  server.py
src/cta_eta/schemas/: train_positions.json
tests/: conftest.py  test_api_weather_open_meteo.py  test_cache.py  test_config.py  test_daemon.py  test_logging.py  test_storage.py
tests/data_collection/: test_config.py  test_logging.py  test_utils.py
tests/data_collection/apis/: test_api_cta_stations.py  test_api_track_shape.py  test_api_train_position.py  test_api_weather_nws.py  test_api_weather_nws_sync.py  test_api_weather_open_meteo.py  test_api_weather_open_meteo_sync.py  test_api_weather_openweathermap.py
tests/data_collection/compaction/: test_archiver.py  test_compact.py  test_ipc_reader.py  test_schema_registry.py  test_uploader.py
tests/data_collection/merging/: test_weather_merger.py
tests/data_collection/orchestration/: test_daemon.py  test_daemon_async.py  test_daemon_utils.py  test_diagnostics.py  test_gap_detection.py  test_train_position_daemon.py  test_weather_daemon.py  test_weather_grid_discovery.py
tests/data_collection/storage_cache/: test_cache.py  test_journal_writer.py  test_kv_cache.py  test_parquet_writer.py  test_storage.py  test_weather_grid_cache.py
tests/monitoring/: test_alerting.py  test_cli.py  test_health_check.py  test_run_alerts.py  test_server.py
