[project]
name = "cta-eta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "funlog>=0.2.1",
    "httpx>=0.28.1",
    "rich>=14.2.0",
    "stamina>=25.2.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.37.1",
]
