[project]
name = "cta-eta"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "stamina>=25.2.0",
    "tenacity>=9.1.2",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.37.1",
    "codespell>=2.4.1",
    "funlog>=0.2.1",
    "rich>=14.2.0",
    "ruff>=0.14.13",
]
