# ---- Project Info and Dependencies ----

[project.urls]
Repository = "https://github.com/jdwh08/cta-eta"

[project.optional-dependencies]
eda = [
    "marimo>=0.19.4",
]
# Homepage = "https://..."
# Documentation = "https://..."

[project]
name = "cta-eta"
description = "Chicago Transit Authority Train Estimated Time of Arrival Analysis and Modelling"
authors = [
    { name="jdwh08", email="jdwh08s@gmail.com" },
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.13,<4.0"
dynamic = ["version"]

# https://pypi.org/classifiers/
# Adjust as needed:
classifiers = [
    "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3  - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",

    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",

    "License :: OSI Approved :: Apache Software License",
    
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",

    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",

    "Typing :: Typed",
    "Private :: Do Not Upload",  # don't publish to PyPI!
]


# ---- Main dependencies ----

dependencies = [
    "aiometer>=1.0.0",
    "dotenv>=0.9.9",
    "fsspec>=2026.1.0",
    "gcsfs>=2026.1.0",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "pyarrow>=22.0.0",
    "s3fs>=2026.1.0",
    "stamina>=25.2.0",
    "tenacity>=9.1.2",
]


# ---- Dev dependencies ----

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "funlog>=0.2.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "pytest-mock>=3.15.1",
    "rich>=14.2.0",
    "ruff>=0.14.13",
    "basedpyright>=1.37.1",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
# Script entry points:
cta-monitor = "cta_eta.monitoring.cli:main"
cta-health = "cta_eta.monitoring.health_check:main"
cta-alerts = "cta_eta.monitoring.run_alerts:main"
cta-compact = "cta_eta.data_collection.compaction.compact:main"

# ---- Build system ----

# Dynamic versioning from:
# https://github.com/ninoseki/uv-dynamic-versioning/

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"
# Note JSON schemas don't seem to be right for tool.hatch.version.source so
# this may cause false warnings in IDEs.
# https://github.com/ninoseki/uv-dynamic-versioning/issues/21

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[tool.hatch.build.targets.wheel]
# The source location for the package.
packages = ["src/cta_eta"]


# ---- Settings ----

### RUFF
[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
extend-select = ["B"]
ignore = [
    "D203",  # Incorrect blank line before class (incompatible with D211)
    "D213",  # Multi Line Summary Second Line (incompatible with D212)
    "E402",   # https://docs.astral.sh/ruff/rules/module-import-not-at-top-of-file/
    "E731", # https://docs.astral.sh/ruff/rules/lambda-assignment/
    "FBT",    # flake8-boolean-trap
    "G004",   # Logging statement uses f-string
    "RET504", # Unnecessary assignment before return (good for debugging)

    # Using both ruff formatter and linter so disable these rules:
    # See: https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", # https://docs.astral.sh/ruff/rules/missing-trailing-comma/
    "COM819", # https://docs.astral.sh/ruff/rules/prohibited-trailing-comma/
    "D206", # https://docs.astral.sh/ruff/rules/docstring-tab-indentation/
    "D300", # https://docs.astral.sh/ruff/rules/triple-single-quotes/
    "E111", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple/
    "E114", # https://docs.astral.sh/ruff/rules/indentation-with-invalid-multiple-comment/
    "E117", # https://docs.astral.sh/ruff/rules/over-indented/
    "ISC002", # https://docs.astral.sh/ruff/rules/multi-line-implicit-string-concatenation/
    "Q000", # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/
    "Q001", # https://docs.astral.sh/ruff/rules/bad-quotes-multiline-string/
    "Q002", # https://docs.astral.sh/ruff/rules/bad-quotes-docstring/
    "Q003", # https://docs.astral.sh/ruff/rules/avoidable-escaped-quote/
    "W191", # https://docs.astral.sh/ruff/rules/tab-indentation/

    # Additional Suggested Rules
    # formatter will wrap code close to length, but might go over
    "E501", # https://docs.astral.sh/ruff/rules/line-too-long/
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D102",  # Missing docstring in public method
    "INP001",  # Implicit Namespace
    "PLR2004",  # Magic Value used in Comparison (meh)
    "S101",  # Use of Assert Detected (This is fine for tests)
    "SLF001",  # Private method access
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

### TY
[tool.ty.environment]
python-version = "3.13"

### Pyright
[tool.basedpyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
]
ignore = [""]
defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = false

pythonVersion = "3.13"
pythonPlatform = "Linux"

executionEnvironments = [
  { root = "tests/", reportPrivateUsage = false},
  { root = "src" }
]

### CODESPELL
[tool.codespell]
# Add here as needed:
# ignore-words-list = "foo,bar"
# skip = "foo.py,bar.py"

### PYTEST
[tool.pytest]
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
]
strict = true
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = [
    "tests",
]
norecursedirs = []
filterwarnings = []
